# vegasroom

./: .dockerignore  .gitignore  Cargo.toml  POST-MVP-OPTIONS.md  README.md  TODO.md  VEGASROOM-CONTEXT-HANDOVER.md  compose.yaml
.github/workflows/: ci.yml
docs/: config-tui.md  config.md  current-work-handover.md  design.md  harness-descriptor-handover.md  m1-room-notes.md  managed-ssh.md  package-selection.md  rootless-docker.md  security.md  troubleshooting.md  workspaces.md
harness/pi/: Dockerfile
scripts/: check.sh  update-pi-harness-version.sh
src/: alert.rs  assets.rs  atomic_write.rs  cli.rs  config.rs  config_ui.rs  docker.rs  doctor.rs  harness.rs  main.rs  paths.rs  ssh.rs  workspace.rs
src/cli/: commands.rs  help.rs  parser.rs
src/config_ui/: cache.rs  mod.rs  persistence.rs  presets.rs  render.rs  sections.rs  state.rs  values.rs
src/docker/: doctor_probe.rs  environment.rs  git_identity.rs  overrides.rs  runtime_files.rs
src/doctor/: container.rs  host.rs  mod.rs  output.rs  path_checks.rs  runtime.rs
src/ssh/: discovery.rs  runtime.rs  status.rs  ui.rs
src/ssh/ui/: line_mode.rs  mod.rs  render.rs
