[package]
name = "vegasroom"
version = "0.7.0"
edition = "2021"
description = "Vegasroom MVP CLI wrapper for Pi in rootless Docker"
license = "UNLICENSED"

[[bin]]
name = "vr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
unicode-width = "0.2"
